# emscraper

./: Data.txt  Invalid_Emails.txt  LICENSE  README.md  Valid_Emails.txt  index.html  pyproject.toml  scrape.py  validate_email.py
src/: __init__.py  app.py
